fix: package resolution between modules of the monorepo

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,7 +1,13 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"moduleDetection": "force"
+		"composite": true,
+		"declaration": true,
+		"declarationMap": true,
+		"noEmit": false,
+		"moduleDetection": "force",
+		"rootDir": "src",
+		"outDir": "dist"
 	},
 	"include": ["src/**/*"]
 }
