--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,9 +4,11 @@
 		"declaration": true,
 		"module": "Node16",
 		"outDir": "dist",
+		"rootDir": "src",
 		"target": "es2022",
 		"moduleResolution": "node16"
 	},
+	"references": [{ "path": "../core" }],
 	"include": ["./src/**/*"],
 	"ts-node": {
 		"esm": true
